--- a/.config/i3/config
+++ b/.config/i3/config
@@ -37,13 +37,23 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 #bindsym $mod+d exec dmenu_run
-bindsym $mod+d exec rofi -show run -theme Monokai 
+#bindsym $mod+d exec rofi -show run -theme Monokai 
+bindsym $mod+d exec --no-startup-id rofi -show drun -opacity 80 -bw 0 -show-icons -yoffset 30
+bindsym $mod+Tab exec --no-startup-id rofi -show window -show-icons -yoffset 30
+bindsym $mod+Shift+Tab exec --no-startup-id rofi -show windowcd -show-icons  -yoffset 30
+
 
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+
+#interactive screenshot by pressing printscreen
+bindsym Print exec gnome-screenshot -i 
+#crop-area screenshot by pressing Mod + printscreen
+#bindsym $mod+Print exec gnome-screenshot -a
+bindsym --release $mod+Print exec gnome-screenshot -a
 
 # change focus
 bindsym $mod+j focus left
@@ -160,26 +170,27 @@ set $urgent-bg-color     #E53935
 
 # window colors
 #                       border              background         text                 indicator
-client.focused          $bg-color           $bg-color          $text-color          #00ff00
-client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
-client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
-client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #00ff00
+client.focused          $bg-color           $bg-color          $text-color          #00ff0000
+client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff0000
+client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff0000
+client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #00ff0000
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3blocks
+# bar {
+#         status_command i3blocks
 
-	colors {
-		background $bg-color
-	    	separator #757575
-		#                  border             background         text
-		focused_workspace  $bg-color          $bg-color          $text-color
-		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
-	}
-}
+# 	colors {
+# 		background $bg-color
+# 	    	separator #757575
+# 		#                  border             background         text
+# 		focused_workspace  $bg-color          $bg-color          $text-color
+# 		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
+# 		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+# 	}
+# }
 
+exec_always --no-startup-id ~/.config/polybar/launch.sh &
 bindsym $mod+shift+x exec i3lock --color "$bg-color" 
 
 
@@ -200,7 +211,7 @@ bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
-exec_always feh --bg-scale /home/varun/Downloads/aron-van-de-pol-hXOGHaGCtdA-unsplash.jpg 
+exec_always feh --bg-scale /home/varun/Downloads/frosted_glaas.jpg
 
 
 
@@ -211,18 +222,19 @@ exec_always feh --bg-scale /home/varun/Downloads/aron-van-de-pol-hXOGHaGCtdA-uns
 
 
 exec_always compton -f
+exec_always xfce4-power-manager
 #exec_always guake
 bindsym Control+Mod1+t exec urxvt -name floating
 for_window [class="URxvt" instance="floating"] floating enable
 #for_window [class="Gnome-terminal"] floating enable
 for_window [class="Gnome-terminal"] border pixel 1
-
-
-
+for_window [class="Google-chrome"] border pixel 1
+for_window [class="Code"] border pixel 1
+for_window [class="discord"] border pixel 1
 #-----------------------------i3-gaps-----------------------
-#smart_gaps on
-#gaps inner 10
-#gaps outer 20
+# smart_gaps on
+gaps inner 10
+gaps outer 20
 
 
 set $mode_gaps Gaps: (o)uter, (i)nner, (h)orizontal, (v)ertical, (t)op, (r)ight, (b)ottom, (l)eft
